[MKTAS] Please stop crashing on mobile now

--- a/AccountSnapshot/Style/gameprofile.css
+++ b/AccountSnapshot/Style/gameprofile.css
@@ -6,8 +6,8 @@
     border-bottom: 3px solid #FFF;
     padding-top: 20px;
     background-image: url(../Images/UI/Background/gradient.png);
-    background-size: contain;
-    background-attachment: fixed;
+    /* background-size: contain;
+    background-attachment: fixed; */
     z-index: 999;
 }
 
@@ -199,8 +199,8 @@
     height: 120px;
     border-bottom: 3px solid #FFF;
     background-image: url(../Images/UI/Background/gradient.png);
-    background-size: contain;
-    background-attachment: fixed;
+    /* background-size: contain;
+    background-attachment: fixed; */
     z-index: 999;
     padding-bottom: 10px;
 }
